--- a/index.html
+++ b/index.html
@@ -59,17 +59,17 @@
 <!-- Содержимое страницы -->
 <div id="home" class="section active">
     <h2>Добро пожаловать!</h2>
-    <p>Это главная страница нашего одностраничного сайта.</p>
+    <p>Мой ребенок</p>
 </div>
 
 <div id="about" class="section">
     <h2>Обо мне</h2>
-    <p>Здесь вы можете узнать немного о моем профиле.</p>
+    <p>Я талантлив</p>
 </div>
 
 <div id="skills" class="section">
     <h2>Навыки</h2>
-    <p>Этот раздел посвящен моим навыкам и умениям.</p>
+    <p>Я рожден чтобы дышать.</p>
 </div>
 
 <div id="image" class="section">
