--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
 <div id="image" class="section">
     <h2>Изображение</h2>
     <p>Здесь будет размещено какое-то изображение.</p>
+    <img src="photo_5219885922374507538_y.jpg">
 </div>
 
 <!-- Подключение скрипта -->
